
syntax = "proto3";

message News {
    string id = 1;
    string title = 2;
    string body = 3;
    string image = 4;
}

service NewsService {
    rpc GetAllNews (Empty) returns (NewsList) {}
    rpc GetNews (NewsId) returns (News) {}
    rpc AddNews (News) returns (News) {}
    rpc UpdateNews (News) returns (News) {}
    rpc DeleteNews (NewsId) returns (NewsId) {}
}

message Empty {}

message NewsList {
   repeated News news = 1;
}

message NewsId {
    string id = 1;
}